--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <div class="intro-header__wrap">
                                     <h1 class="intro-title">Горячие Закуски</h1>
                                     <div class="intro-header__col">
-                                        <div class="intro-header__text">Картошка фри (маленькая/,большая)</div>
+                                        <div class="intro-header__text">Картошка фри (маленькая/большая)</div>
                                         <div class="intro-header__price">120/150 руб.</div>
                                     </div>
                                     <div class="intro-header__col">
