--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                     <div class="intro-header__wrap">
                                         <h1 class="intro-title">Горячие Закуски</h1>
                                         <div class="intro-header__col">
-                                            <div class="intro-header__text">Картошка фри (маленькая/большая)</div>
-                                            <div class="intro-header__price">120/150 руб.</div>
+                                            <div class="intro-header__text">Картошка фри</div>
+                                            <div class="intro-header__price">150 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
                                             <div class="intro-header__text">Лук Фри</div>
@@ -303,7 +303,7 @@
                                             <div class="intro-footer__price"><span>110 руб.</span></div>
                                         </div>
                                         <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Сок асс</div>
+                                            <div class="intro-footer__text">Сок асс.</div>
                                             <span class="intro-footer__subtext">250мл</span>
                                             <div class="intro-footer__price"><span>50 руб.</span></div>
                                         </div>
