--- a/index.html
+++ b/index.html
@@ -142,8 +142,21 @@
                                             <div class="intro-header__price">160 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
+                                            <div class="intro-header__text">Стрипсы куриные</div>
+                                            <div class="intro-header__price">140 руб.</div>
+                                        </div>
+                                        <div class="intro-header__col">
                                             <div class="intro-header__text">Наггетсы</div>
                                             <div class="intro-header__price">130 руб.</div>
+                                        </div>
+
+                                        <div class="intro-header__wrap intro-header__wrap--two">
+                                            <h1 class="intro-title">Десерт</h1>
+                                            <div class="intro-header__col">
+                                                <div class="intro-header__text">Пончик</div>
+                                                <div class="intro-header__price">38 руб.</div>
+                                            </div>
+
                                         </div>
                                     </div>
 
@@ -219,17 +232,17 @@
                                                             <div class="intro__table-row">
                                                                 <div class="intro__title"> Раф </div>
                                                             </div>
-                                                            <div class="intro__table-row">
+                                                            <!-- <div class="intro__table-row">
                                                                 <span class="intro__text">эспрессо, сливки, сироп
                                                                 </span>
-                                                            </div>
+                                                            </div> -->
                                                         </div>
                                                     </div>
                                                     <div class="intro__price">
                                                         <span>180 руб.</span>
                                                     </div>
                                                 </div>
-                                                <div class="intro__row">
+                                                <!-- <div class="intro__row">
                                                     <div class="intro__col">
                                                         <div class="intro__table">
                                                             <div class="intro__table-row">
@@ -244,31 +257,31 @@
                                                     <div class="intro__price">
                                                         <span>230 руб.</span>
                                                     </div>
-                                                </div>
-                                                <div class="intro__row">
+                                                </div> -->
+                                                <!-- <div class="intro__row">
                                                     <div class="intro__col">
                                                         <div class="intro__table">
                                                             <div class="intro__table-row">
                                                                 <div class="intro__title">Какао</div>
                                                             </div>
-                                                            <!-- <div class="intro__table-row">
+                                                            <div class="intro__table-row">
                                                             <span class="intro__text">апельсин, лимон</span>
-                                                        </div> -->
+                                                        </div>
                                                         </div>
                                                     </div>
                                                     <div class="intro__price">
                                                         <span>120 руб.</span>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                                 <div class="intro__row">
                                                     <div class="intro__col">
                                                         <div class="intro__table">
                                                             <div class="intro__table-row">
                                                                 <div class="intro__title">Чай </div>
                                                             </div>
-                                                            <div class="intro__table-row">
+                                                            <!-- <div class="intro__table-row">
                                                                 <span class="intro__text">апельсин, лимон</span>
-                                                            </div>
+                                                            </div> -->
                                                         </div>
                                                     </div>
                                                     <div class="intro__price">
@@ -279,39 +292,41 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="intro-footer">
-                                    <h1 class="intro-title">Безалкогольные напитки</h1>
-                                    <div class="intro-footer__wrap">
-                                        <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Вода асс.</div>
-                                            <span class="intro-footer__subtext">0.5л</span>
-                                            <div class="intro-footer__price"><span>65 руб.</span></div>
+                                    <div class="intro-footer">
+                                        <h1 class="intro-title">Безалкогольные напитки</h1>
+                                        <div class="intro-footer__wrap">
+                                            <div class="intro-footer__col">
+                                                <div class="intro-footer__text">Вода асс.</div>
+                                                <span class="intro-footer__subtext">0.5л</span>
+                                                <div class="intro-footer__price"><span>65 руб.</span></div>
+                                            </div>
+                                            <div class="intro-footer__col">
+                                                <div class="intro-footer__text">Кола</div>
+                                                <span class="intro-footer__subtext">1л</span>
+                                                <div class="intro-footer__price"><span>140 руб.</span></div>
+                                            </div>
+                                            <div class="intro-footer__col">
+                                                <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
+                                                <span class="intro-footer__subtext">250мл </span>
+                                                <div class="intro-footer__price"><span>90 руб.</span></div>
+                                            </div>
+                                            <div class="intro-footer__col">
+                                                <div class="intro-footer__text">Кола Стекло</div>
+                                                <span class="intro-footer__subtext">200мл </span>
+                                                <div class="intro-footer__price"><span>110 руб.</span></div>
+                                            </div>
+                                            <div class="intro-footer__col">
+                                                <div class="intro-footer__text">Сок асс.</div>
+                                                <span class="intro-footer__subtext">250мл</span>
+                                                <div class="intro-footer__price"><span>50 руб.</span></div>
+                                            </div>
                                         </div>
-                                        <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Кола</div>
-                                            <span class="intro-footer__subtext">1л</span>
-                                            <div class="intro-footer__price"><span>140 руб.</span></div>
-                                        </div>
-                                        <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
-                                            <span class="intro-footer__subtext">250мл </span>
-                                            <div class="intro-footer__price"><span>90 руб.</span></div>
-                                        </div>
-                                        <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Кола Стекло</div>
-                                            <span class="intro-footer__subtext">200мл </span>
-                                            <div class="intro-footer__price"><span>110 руб.</span></div>
-                                        </div>
-                                        <div class="intro-footer__col">
-                                            <div class="intro-footer__text">Сок асс.</div>
-                                            <span class="intro-footer__subtext">250мл</span>
-                                            <div class="intro-footer__price"><span>50 руб.</span></div>
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                         <!-- <div class="swiper-slide">
                         <div class="container">
                             <div class="intro-footer intro-footer_two">
