--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                         </div>
                                         <div class="intro-header__col">
                                             <div class="intro-header__text">Стрипсы куриные</div>
-                                            <div class="intro-header__price">140 руб.</div>
+                                            <div class="intro-header__price">150 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
                                             <div class="intro-header__text">Наггетсы</div>
@@ -154,7 +154,7 @@
                                             <h1 class="intro-title">Десерт</h1>
                                             <div class="intro-header__col">
                                                 <div class="intro-header__text">Пончик</div>
-                                                <div class="intro-header__price">38 руб.</div>
+                                                <div class="intro-header__price">-</div>
                                             </div>
 
                                         </div>
