--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">
-                                                                Кетчуп, Сырный, Кисло - сладкий,Баркекью, Терияки,
+                                                                Кетчуп, Сырный, Кисло - сладкий,Барбекю, Терияки,
                                                                 Брусничный, Чесночный</span>
                                                         </div>
                                                     </div>
