--- a/index.html
+++ b/index.html
@@ -42,17 +42,16 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
-                                                    <div class="intro__title">Beef- Бургер</div>
+                                                    <div class="intro__title">Донер стрипс</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <span class="intro__text">Котлета Говяжья, Булочка Бриошь,
-                                                                Бургер Соус, Кетчуп, Брусничный Соус
-                                                                , Помидор, Лук фри, Огурец(соленый) Айсберг</span>
+                                                            <span class="intro__text">Стрипы куриные, Булочка Датская
+                                                                , Помидор, Огурец(соленый), Соус</span>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="intro__price">
-                                                    <span>300 руб.</span>
+                                                    <span>280 руб.</span>
                                                 </div>
                                             </div>
                                             <div class="intro__row">
@@ -126,7 +125,7 @@
                                     <div class="intro-header__wrap">
                                         <h1 class="intro-title">Горячие Закуски</h1>
                                         <div class="intro-header__col">
-                                            <div class="intro-header__text">Картошка фри</div>
+                                            <div class="intro-header__text">Картошка фри/Картофель по-деревенски</div>
                                             <div class="intro-header__price">150 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
