--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     <div class="intro-header__wrap">
                                         <h1 class="intro-title">Горячие Закуски</h1>
                                         <div class="intro-header__col">
-                                            <div class="intro-header__text">Картошка фри/Картофель по-деревенски</div>
+                                            <div class="intro-header__text">Картофель фри/Картофель по-деревенски</div>
                                             <div class="intro-header__price">150 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
