--- a/index.html
+++ b/index.html
@@ -50,10 +50,29 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
+                                                <div class="intro__price">
+                                                    <span>240 руб.</span>
+                                                </div>
+
+                                            </div>
+                                            <div class="intro__row">
+                                                <div class="intro__col">
+                                                    <div class="intro__title">Донер
+                                                        стрипс(Сырный)</div>
+                                                    <div class="intro__table">
+                                                        <div class="intro__table-row">
+                                                            <span class="intro__text">Стрипы куриные, Булочка Датская
+                                                                , Помидор, Огурец(соленый), Соус</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+
                                                 <div class="intro__price">
                                                     <span>280 руб.</span>
                                                 </div>
                                             </div>
+
                                             <div class="intro__row">
                                                 <div class="intro__col">
                                                     <div class="intro__title">BBQ(с Беконом) Бургер</div>
@@ -76,7 +95,7 @@
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
                                                             <span class="intro__text">Солнечная булочка , Котлета
-                                                                Говяжья, Соус горчичный,Кетчуп, Сыр,Сырный шарик,
+                                                                Говяжья, Соус горчичный,Кетчуп, Сыр,Сырная котлета,
                                                                 Айсберг, Огурец, Помидор</span>
                                                         </div>
                                                     </div>
@@ -103,7 +122,7 @@
                                                     <span>320 руб.</span>
                                                 </div>
                                             </div>
-                                            <div class="intro__row">
+                                            <!-- <div class="intro__row">
                                                 <div class="intro__col">
                                                     <div class="intro__title">Соус</div>
                                                     <div class="intro__table">
@@ -117,7 +136,7 @@
                                                 <div class="intro__price">
                                                     <span>30 руб.</span>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
