--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
                                                     <div class="intro__title">Донер стрипс</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
@@ -58,6 +61,9 @@
                                             </div>
                                             <div class="intro__row">
                                                 <div class="intro__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
                                                     <div class="intro__title">Донер
                                                         стрипс(Сырный)</div>
                                                     <div class="intro__table">
