--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                                     <div class="intro__title">Донер стрипс</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <span class="intro__text">Стрипы куриные, Булочка Датская
+                                                            <span class="intro__text">Стрипсы куриные, Булочка Датская
                                                                 , Помидор, Огурец(соленый), Соус</span>
                                                         </div>
                                                     </div>
@@ -68,8 +68,8 @@
                                                         стрипс(Сырный)</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <span class="intro__text">Стрипы куриные, Булочка Датская
-                                                                , Помидор, Огурец(соленый), Соус</span>
+                                                            <span class="intro__text">Стрипсы куриные, Булочка Датская
+                                                                , Помидор, Огурец(соленый), Сырная котлета Соус</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -316,36 +316,61 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="intro-footer">
-                                        <h1 class="intro-title">Безалкогольные напитки</h1>
-                                        <div class="intro-footer__wrap">
-                                            <div class="intro-footer__col">
-                                                <div class="intro-footer__text">Вода асс.</div>
-                                                <span class="intro-footer__subtext">0.5л</span>
-                                                <div class="intro-footer__price"><span>65 руб.</span></div>
+                                    <div class="intro-footer-wrap">
+                                        <div class="intro-footer">
+                                            <h1 class="intro-title">Безалкогольные напитки</h1>
+                                            <div class="intro-footer__wrap">
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Вода асс.</div>
+                                                    <span class="intro-footer__subtext">0.5л</span>
+                                                    <div class="intro-footer__price"><span>65 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Кола</div>
+                                                    <span class="intro-footer__subtext">1л</span>
+                                                    <div class="intro-footer__price"><span>140 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
+                                                    <span class="intro-footer__subtext">250мл </span>
+                                                    <div class="intro-footer__price"><span>90 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Кола Стекло</div>
+                                                    <span class="intro-footer__subtext">200мл </span>
+                                                    <div class="intro-footer__price"><span>110 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro-footer__text">Сок асс.</div>
+                                                    <span class="intro-footer__subtext">250мл</span>
+                                                    <div class="intro-footer__price"><span>50 руб.</span></div>
+                                                </div>
                                             </div>
-                                            <div class="intro-footer__col">
-                                                <div class="intro-footer__text">Кола</div>
-                                                <span class="intro-footer__subtext">1л</span>
-                                                <div class="intro-footer__price"><span>140 руб.</span></div>
-                                            </div>
-                                            <div class="intro-footer__col">
-                                                <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
-                                                <span class="intro-footer__subtext">250мл </span>
-                                                <div class="intro-footer__price"><span>90 руб.</span></div>
-                                            </div>
-                                            <div class="intro-footer__col">
-                                                <div class="intro-footer__text">Кола Стекло</div>
-                                                <span class="intro-footer__subtext">200мл </span>
-                                                <div class="intro-footer__price"><span>110 руб.</span></div>
-                                            </div>
-                                            <div class="intro-footer__col">
-                                                <div class="intro-footer__text">Сок асс.</div>
-                                                <span class="intro-footer__subtext">250мл</span>
-                                                <div class="intro-footer__price"><span>50 руб.</span></div>
-                                            </div>
-                                        </div>
 
+                                        </div>
+                                        <div class="intro-footer intro-footer--two">
+                                            <h1 class="intro-title">Согревающие напитки</h1>
+                                            <div class="intro-footer__wrap">
+                                                <div class="intro-footer__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                    <div class="intro-footer__text">Глинтвейн</div>
+                                                    <span class="intro-footer__subtext">Красный / Белый</span>
+                                                    <div class="intro-footer__price"><span>200 руб.</span></div>
+                                                </div>
+                                                <div class="intro-footer__col">
+                                                    <div class="intro__decor">
+                                                        NEW
+                                                    </div>
+                                                    <div class="intro-footer__text">Пьяная Вишня</div>
+                                                    <!-- <span class="intro-footer__subtext">1л</span> -->
+                                                    <div class="intro-footer__price"><span>180 руб.</span></div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
