--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Кола</div>
-                                                    <span class="intro-footer__subtext">1л</span>
-                                                    <div class="intro-footer__price"><span>140 руб.</span></div>
+                                                    <span class="intro-footer__subtext">0,5л/1л</span>
+                                                    <div class="intro-footer__price"><span>120/150 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
@@ -342,8 +342,8 @@
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Сок асс.</div>
-                                                    <span class="intro-footer__subtext">250мл</span>
-                                                    <div class="intro-footer__price"><span>50 руб.</span></div>
+                                                    <span class="intro-footer__subtext">0,2мл/0.3мл</span>
+                                                    <div class="intro-footer__price"><span>50/80 руб.</span></div>
                                                 </div>
                                             </div>
 
