--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Кола</div>
                                                     <span class="intro-footer__subtext">0,5л/1л</span>
-                                                    <div class="intro-footer__price"><span>120/150 руб.</span></div>
+                                                    <div class="intro-footer__price"><span>120 руб. / 150 руб.</span></div>
                                                 </div>
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Кола/Фанта Ж/Б</div>
@@ -343,7 +343,7 @@
                                                 <div class="intro-footer__col">
                                                     <div class="intro-footer__text">Сок асс.</div>
                                                     <span class="intro-footer__subtext">0,2мл/0.3мл</span>
-                                                    <div class="intro-footer__price"><span>50/80 руб.</span></div>
+                                                    <div class="intro-footer__price"><span>50 руб. / 80 руб.</span></div>
                                                 </div>
                                             </div>
 
